Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumberNumObjField.quorum
class Main
    number v = Test()
    action Main
    end

    action Test() returns number
        Number var
        var:SetValue(5.0)
        return var
    end
end